--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-redux-videoplayer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://foxandarrows.github.io/react-redux-videoplayer/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -19,6 +20,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
